Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   background-color: #fff;
-  min-height: 100vh;
-  max-width: 880px;
+  min-height: 80vh;
+  max-width: 1100px;
   margin: auto;
 }
 
@@ -19,8 +19,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 
 .back-btn:hover {
