--- a/src/Components/CardPage/CardPage.css
+++ b/src/Components/CardPage/CardPage.css
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 .cardPage__write-message-btn {
     border-radius: 30px;
@@ -73,25 +72,28 @@
     }
 }
 
+.cardPage-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    margin: 0;
+    margin-left: 0;
+}
+
 .cardPage-main-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     border-radius: 10px;
-    max-width: 1100px;
+    
     padding: 20px;
     box-shadow: 0 3px 6px #999;
-}
-
-.cardPage-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: calc(100% - 20px);
+    margin: auto;
+    box-sizing: border-box;
 }
 
 .cardPage-info {
